UI for page edit

--- a/src/styles/table.scss
+++ b/src/styles/table.scss
@@ -1,6 +1,11 @@
+.table td {
+  text-align: center;
+}
+
 .table.b-table > thead > tr {
   & > .table-b-table-default {
     background-color: white;
+    text-align: center;
   }
 
   & > [ aria-sort="none" ],
